<resources>
    <string name="app_name">G18_MyHomeworkApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="deadline_hint">Deadline</string>
    <string name="course_title_hint">Course Title</string>
    <string name="workload_hint">Workload (hour)</string>

    <string name="cancel_button">Cancel</string>
    <string name="add_button">Add</string>
    <string name="save_button">Save</string>
    <string name="done_button">Done</string>

    <string name="add_new_homework">Add a new homework</string>

    <string name="done_text">Done</string>
</resources>